// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header block saved block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-header alignfull ugb-header ugb-header--v2 ugb--background-opacity-2 ugb-header--design-design ugb--has-background ugb--has-background-image ugb--shadow-1 ugb--content-width ugb-header--invert ugb-header--full-height className"
  style={
    Object {
      "--ugb-background-color": "#123456",
      "backgroundAttachment": "fixed",
      "backgroundColor": "#123456",
      "backgroundImage": "url(backgroundImageURL)",
      "borderRadius": 6,
      "textAlign": "contentAlign",
    }
  }
>
  <div
    className="ugb-content-wrapper"
  >
    <h2
      className="ugb-header__title"
      style={
        Object {
          "color": "#123456",
          "textAlign": "contentAlign",
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "title",
          }
        }
      />
    </h2>
    <p
      className="ugb-header__subtitle"
      style={
        Object {
          "color": "#123456",
          "textAlign": "contentAlign",
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "subtitle",
          }
        }
      />
    </p>
    <div>
      <a
        className="ugb-button ugb-button--align-contentAlign ugb-button--size-size ugb-button--design-buttonDesign ugb-button--has-icon"
        href="buttonURL"
        style={
          Object {
            "backgroundColor": "#123456",
            "borderColor": undefined,
            "borderRadius": "2px",
            "color": "#123456",
          }
        }
        target="_blank"
      >
        <span
          className="ugb-button--inner"
          style={
            Object {
              "color": "#123456",
            }
          }
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "buttonText",
              }
            }
          />
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Header block saved default block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-header ugb-header ugb-header--v2 ugb--background-opacity-5 ugb-header--design-basic ugb--has-background"
  style={
    Object {
      "--ugb-background-color": undefined,
      "backgroundAttachment": undefined,
      "backgroundColor": "#000000",
      "backgroundImage": undefined,
      "borderRadius": undefined,
      "textAlign": "center",
    }
  }
>
  <div
    className="ugb-content-wrapper"
  >
    <h2
      className="ugb-header__title"
      style={
        Object {
          "color": "#ffffff",
          "textAlign": "center",
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Title for This Block",
          }
        }
      />
    </h2>
    <p
      className="ugb-header__subtitle"
      style={
        Object {
          "color": "#ffffff",
          "textAlign": "center",
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description for this block. Use this space for describing your block. Any text will do.",
          }
        }
      />
    </p>
    <div>
      <a
        className="ugb-button ugb-button--align-center ugb-button--size-normal"
        href=""
        style={
          Object {
            "backgroundColor": undefined,
            "borderColor": undefined,
            "borderRadius": "4px",
            "color": "#ffffff",
          }
        }
      >
        <span
          className="ugb-button--inner"
          style={
            Object {
              "color": "#ffffff",
            }
          }
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "Button text",
              }
            }
          />
        </span>
      </a>
    </div>
  </div>
</div>
`;
